[package]
name = "air-vinyl-server"
version = "0.0.0"
authors = ["Linus Unnebäck <linus@folkdatorn.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
docopt = "1"
log = "^0.4.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
stderrlog = "^0.5.1"
tokio = { version = "^1.12.0", features = ["macros", "process", "rt"] }
warp = "^0.3.1"
