[package]
name = "air-vinyl-server"
version = "0.0.0"
authors = ["Linus Unnebäck <linus@folkdatorn.se>"]
edition = "2021"
rust-version = "1.56"

[dependencies]
docopt = "1"
log = "^0.4.11"
raop_play = { git = "https://github.com/LinusU/rust-raop-player" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
stderrlog = "^0.5.1"
tokio = { version = "^1.12.0", features = ["macros", "process", "rt"] }
warp = "^0.3.1"
